[project]
name = "ey-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastmcp>=2.14.4",
    "ipykernel>=7.1.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-dynamodb>=0.1.0",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.6.6",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pypdf>=6.6.2",
    "tavily-python>=0.7.19",
]
